add additional JS code

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,25 +51,25 @@
           </svg>
         </button>
 
-        <div class="mob-menu is-hidden" data-menu>
+        <div class="mob-menu is-hidden" id="is_hidden" data-menu>
           <ul class="mob-nav-list">
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#about_us">About us</a>
+              <a class="mob-nav-link" href="#about_us" id="about_us_anchor">About us</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#our_products">Our products</a>
+              <a class="mob-nav-link" href="#our_products" id="our_products_anchor">Our products</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#prices">Prices</a>
+              <a class="mob-nav-link" href="#prices" id="prices_anchor">Prices</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#bestsellers">Bestsellers</a>
+              <a class="mob-nav-link" href="#bestsellers" id="bestsellers_anchor">Bestsellers</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#reviews">Reviews</a>
+              <a class="mob-nav-link" href="#reviews" id="reviews_anchor">Reviews</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#contacts">Contacts</a>
+              <a class="mob-nav-link" href="#contacts" id="contacts_anchor">Contacts</a>
             </li>
           </ul>
         </div>
