--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,6 +23,9 @@ body {
   color: #0a224a;
   background-color: #fff;
 }
+section {
+  scroll-margin-top: 88px;
+}
 
 :root {
   --blue-font: #0a224a;
