--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
               <a class="header-nav-link" href="#bestsellers">Bestsellers</a>
             </li>
             <li class="header-nav-item">
-              <a class="header-nav-link" href="#reviews">Reviews</a>
+              <a class="header-nav-link" href="#clients_reviews">Reviews</a>
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link" href="#contacts">Contacts</a>
