--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,13 +60,13 @@
               <a class="mob-nav-link" href="#our_products" id="our_products_anchor">Our products</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#prices" id="prices_anchor">Prices</a>
+              <a class="mob-nav-link" href="#price" id="prices_anchor">Prices</a>
             </li>
             <li class="mob-nav-item">
               <a class="mob-nav-link" href="#bestsellers" id="bestsellers_anchor">Bestsellers</a>
             </li>
             <li class="mob-nav-item">
-              <a class="mob-nav-link" href="#reviews" id="reviews_anchor">Reviews</a>
+              <a class="mob-nav-link" href="#clients_reviews" id="reviews_anchor">Reviews</a>
             </li>
             <li class="mob-nav-item">
               <a class="mob-nav-link" href="#contacts" id="contacts_anchor">Contacts</a>
