--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,7 @@
       <p class="hero-text">
         Add a touch of elegance to your space with handcrafted furniture pieces
       </p>
-      <a class="hero-btn" type="button" href="#subscription"> Subscribe </a>
+      <a class="hero-btn" href="#subscription"> Subscribe </a>
     </div>
   </div>
 </section>
