--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -28,7 +28,7 @@
 .hero-btn {
   display: flex;
   width: 224px;
-  padding: 12px 65px;
+  height: 48px;
   justify-content: center;
   align-items: center;
   background: var(--blue-font, #0a224a);
@@ -77,7 +77,7 @@
     font-size: 18px;
   }
   .hero-btn {
-    padding: 17px 65px;
+    height: 50px;
     font-size: 18px;
   }
 }
