--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -23,7 +23,7 @@
           </svg>
         </div>
         <div class="container-checkbox">
-          <input type="checkbox" id="user-agree" name="agree-checkbox" name="user-agree" value="true"
+          <input type="checkbox" id="user-agree" name="agree-checkbox" value="true"
             class="input-checkbox visually-hidden" />
           <label for="user-agree" class="label-checkbox">
             <span class="label-span">
