--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
             <!-- logo -->
             <div class="ftr-logo">
               <span>
-                <a href="/src/index.html" class="media-icons"><svg class="ftr-logo-media" width="100" height="16">
+                <a href="./index.html" class="media-icons"><svg class="ftr-logo-media" width="100" height="16">
                   <use href="./img/icons.svg#icon-logo"></use>
                   </svg>
                 </a>
