--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,36 +13,34 @@
             <!-- icons -->
             <ul class="ftr-media-list">
                 <li class="list media-icons">
-                <a
-                    href=""
+                  <a href="https://www.facebook.com/"
                     aria-label="Facebook"
-                    rel="noopener norefferrer"
-                    target="https://www.facebook.com/">
+                    rel="noopener norefferrer nofollow"
+                    target="_blank">
                     <svg class="ftr-media" width="28" height="28">
                     <use href="./img/icons.svg#fb"></use>
                     </svg>
-                </a>
+                  </a>
                 </li>
                 <li class="list media-icons">
-                <a
-                    href=""
+                  <a href="https://www.instagram.com/"
                     aria-label="Instagram"
-                    rel="noopener norefferrer"
-                    target="https://www.instagram.com/">
-                <svg class="ftr-media" width="28" height="28">
-                  <use href="./img/icons.svg#inst"></use>
-                </svg>
-                </a>  
+                    rel="noopener norefferrer nofollow"
+                    target="_blank">
+                    <svg class="ftr-media" width="28" height="28">
+                      <use href="./img/icons.svg#inst"></use>
+                    </svg>
+                  </a>  
                 </li>
                 <li class="list media-icons">
-                <a
-                    href=""
+                  <a href="https://www.youtube.com/"
                     aria-label="Youtube"
-                    rel="noopener norefferrer"
-                    target="https://www.youtube.com/">
+                    rel="noopener norefferrer nofollow"
+                    target="_blank">
                     <svg class="ftr-media" width="28" height="28">
-                  <use href="./img/icons.svg#youtube"></use>
-                </svg></a>
+                      <use href="./img/icons.svg#youtube"></use>
+                    </svg>
+                 </a>
                 </li>
             </ul>
         </div>
