--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -76,7 +76,7 @@
             </li>
             <li class="list">
               <a
-                href="#reviews"
+                href="#clients_reviews"
                 class="ftr-link-m">
                 Reviews
               </a>
