--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
       <div class="container">
         <div class="header-logo">
-          <a class="logo-link" href="./index.html" aria-label="Open Site"
+          <a class="logo-link" href="./index.html" aria-label="Site Logo"
             ><svg class="logo" width="100" height="16">
               <use href="/img/icons.svg#icon-logo"></use></svg
           ></a>
