--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -4,22 +4,22 @@
     <ul class="price-list list">
       <hr class="price-line" />
       <li class="price-item">
-        <a href="#chairs" class="price-item-link link">Chairs</a>
+        <a href="#chairs" class="price-item-link link" aria-label="chairs items">Chairs</a>
         <p class="price-item-value">from 200$</p>
       </li>
       <hr class="line" />
       <li class="price-item">
-        <a href="#tables" class="price-item-link link">Tables</a>
+        <a href="#tables" class="price-item-link link" aria-label="tables items">Tables</a>
         <p class="price-item-value">from 250$</p>
       </li>
       <hr class="line" />
       <li class="price-item">
-        <a href="#dressers" class="price-item-link link">Dressers</a>
+        <a href="#dressers" class="price-item-link link" aria-label="dressers items">Dressers</a>
         <p class="price-item-value">from 300$</p>
       </li>
       <hr class="line" />
       <li class="price-item">
-        <a href="#sofas" class="price-item-link link">Sofas</a>
+        <a href="#sofas" class="price-item-link link" aria-label="sofas items">Sofas</a>
         <p class="price-item-value">from 500$</p>
       </li>
       <hr class="line" />
