--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,3 @@
-body {
-  font-family: 'Roboto', sans-serif;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-  display: block;
-}
-
-button {
-  cursor: pointer;
-}
-
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -136,6 +118,24 @@ main {
   .header-nav-link {
     color: var(--blue-font);
     padding: 34px 0;
+    position: relative;
+  }
+
+  .header-nav-link:hover:after {
+    position: absolute;
+    bottom: 5px;
+    left: 2px;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: var(--blue-font);
+    border-radius: 2px;
+  }
+  .header-nav-link:is(:hover, :focus) {
+    color: #061835;
+  }
+  .header-nav-item:is(:hover, :focus) {
+    transform: scale(1.1);
   }
   .logo-link {
     padding: 34px 0;
