--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,7 +60,7 @@
     </nav>
 
     <!--? MOBILE MENU  -->
-    <button id="openBtn" type="button" class="mob-menu-open-btn" data-menu-open>
+    <button id="openBtn" type="button" class="mob-menu-open-btn" data-menu-open aria-label="open mobile menu">
       <svg width="32" height="32">
         <use href="/img/icons.svg#icon-burger-menu"></use>
       </svg>
@@ -69,7 +69,7 @@
       id="closeBtn"
       class="close-menu-btn hidden"
       type="button"
-      data-menu-close
+      data-menu-close aria-label="open mobile menu"
     >
       <svg width="32" height="32">
         <use href="/img/icons.svg#icon-close-menu"></use>
