--- a/src/css/price.css
+++ b/src/css/price.css
@@ -1,7 +1,3 @@
-hr {
-  border-color: var(--blue-font);
-  margin: 0;
-}
 .price-item {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -20,7 +16,24 @@ hr {
   text-transform: uppercase;
   transition: transform 200ms linear 200ms;
 }
-
+.price-item-value::before {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: #0a224a;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.price-item-value::after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: #0a224a;
+  position: absolute;
+  bottom: -1px;
+  right: 0;
+}
 .price-item::before {
   height: 3px;
   width: 50px;
