--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -2,27 +2,33 @@
   <div class="container">
     <h2 class="visually-hidden">Chairs Tables Dressers Sofas Price</h2>
     <ul class="price-list list">
-      <hr class="price-line" />
       <li class="price-item">
-        <a href="#chairs" class="price-item-link link" aria-label="chairs items">Chairs</a>
+        <a href="#chairs" class="price-item-link link" aria-label="chairs items"
+          >Chairs</a
+        >
         <p class="price-item-value">from 200$</p>
       </li>
-      <hr class="line" />
       <li class="price-item">
-        <a href="#tables" class="price-item-link link" aria-label="tables items">Tables</a>
+        <a href="#tables" class="price-item-link link" aria-label="tables items"
+          >Tables</a
+        >
         <p class="price-item-value">from 250$</p>
       </li>
-      <hr class="line" />
       <li class="price-item">
-        <a href="#dressers" class="price-item-link link" aria-label="dressers items">Dressers</a>
+        <a
+          href="#dressers"
+          class="price-item-link link"
+          aria-label="dressers items"
+          >Dressers</a
+        >
         <p class="price-item-value">from 300$</p>
       </li>
-      <hr class="line" />
       <li class="price-item">
-        <a href="#sofas" class="price-item-link link" aria-label="sofas items">Sofas</a>
+        <a href="#sofas" class="price-item-link link" aria-label="sofas items"
+          >Sofas</a
+        >
         <p class="price-item-value">from 500$</p>
       </li>
-      <hr class="line" />
     </ul>
   </div>
 </section>
