--- a/src/css/price.css
+++ b/src/css/price.css
@@ -25,15 +25,17 @@
   top: 0;
   right: 0;
 }
-.price-item-value::after {
+
+.price-item:last-child .price-item-value::after{
   content: '';
   width: 100%;
   height: 1px;
   background-color: #0a224a;
   position: absolute;
-  bottom: -1px;
+  bottom: 0;
   right: 0;
 }
+
 .price-item::before {
   height: 3px;
   width: 50px;
