--- a/src/css/price.css
+++ b/src/css/price.css
@@ -9,7 +9,6 @@
 }
 .price-item-link {
   color: var(--blue-font);
-  font-family: Roboto;
   font-size: 24px;
   font-weight: 400;
   line-height: 1.5;
@@ -20,7 +19,7 @@
   content: '';
   width: 100%;
   height: 1px;
-  background-color: #0a224a;
+  background-color: var(--blue-font);
   position: absolute;
   top: 0;
   right: 0;
@@ -30,7 +29,7 @@
   content: '';
   width: 100%;
   height: 1px;
-  background-color: #0a224a;
+  background-color: var(--blue-font);
   position: absolute;
   bottom: 0;
   right: 0;
