--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -30,7 +30,7 @@
               src="./img/our_products/product1.jpg"
               alt="vooden minimalist
               storage"
-              width="343px"
+              width="343"
             />
           </picture>
 
@@ -57,7 +57,7 @@
             <img
               src="./img/our_products/product2.jpg"
               alt="blue sofa"
-              width="343px"
+              width="343"
             />
           </picture>
           <h3 class="products-description">Handcrafted minimalist seating</h3>
@@ -76,7 +76,7 @@
             <img
               src="./img/our_products/product3.jpg"
               alt="metal table"
-              width="343px"
+              width="343"
             />
           </picture>
           <h3 class="products-description">Sleek and simple tables</h3>
@@ -95,7 +95,7 @@
             <img
               src="./img/our_products/product4.jpg"
               alt="blue chair"
-              width="343px"
+              width="343"
             />
           </picture>
           <h3 class="products-description">
