--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,118 +1,109 @@
 <footer id="contacts" class="ftr-page">
-    <div class="container ftr-container">
-        <div class="logo-ftr-icons">
-            <!-- logo -->
-            <div class="ftr-logo">
-              <span>
-                <a href="./index.html" class="media-icons" aria-label="Site Logo"><svg class="ftr-logo-media" width="100" height="16">
-                  <use href="./img/icons.svg#icon-logo"></use>
-                  </svg>
-                </a>
-              </span>
-            </div>
-            <!-- icons -->
-            <ul class="ftr-media-list">
-                <li class="list media-icons">
-                  <a href="https://www.facebook.com/"
-                    aria-label="Facebook"
-                    rel="noopener norefferrer nofollow"
-                    target="_blank">
-                    <svg class="ftr-media" width="28" height="28">
-                    <use href="./img/icons.svg#fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="list media-icons">
-                  <a href="https://www.instagram.com/"
-                    aria-label="Instagram"
-                    rel="noopener norefferrer nofollow"
-                    target="_blank">
-                    <svg class="ftr-media" width="28" height="28">
-                      <use href="./img/icons.svg#inst"></use>
-                    </svg>
-                  </a>  
-                </li>
-                <li class="list media-icons">
-                  <a href="https://www.youtube.com/"
-                    aria-label="Youtube"
-                    rel="noopener norefferrer nofollow"
-                    target="_blank">
-                    <svg class="ftr-media" width="28" height="28">
-                      <use href="./img/icons.svg#youtube"></use>
-                    </svg>
-                 </a>
-                </li>
-            </ul>
-        </div>
-        <!-- nav -->
-        <ul class="ftr-nav-menu nav-text">
-            <li class="list">
-              <a
-                href="#about_us"
-                class="ftr-link-menu">
-                About us
-              </a>
-            </li>
-            <li class="list">
-              <a
-                href="#our_products"
-                class="ftr-link-menu">
-                Our products
-              </a>
-            </li>
-            <li class="list">
-              <a
-                href="#price"
-                class="ftr-link-menu">
-                Prices
-              </a>
-            </li>
-            <li class="list">
-              <a
-                href="#bestsellers"
-                class="ftr-link-menu">
-                Bestsellers
-              </a>
-            </li>
-            <li class="list">
-              <a
-                href="#clients_reviews"
-                class="ftr-link-m">
-                Reviews
-              </a>
-            </li>
-          </ul>
-        <!-- address -->
-        <div class="ftr-address">
-            <ul class="nav-text ftr-address-text">
-              <li class="list">
-                <a
-                  href="https://goo.gl/maps/otmeh9LYeM7hSeMd6"
-                  class="link">
-                  Obolonsky Prospect, 14, Kyiv</a>
-              </li>
-              <li class="list">Daily 10:00-21:00</li>
-            </ul>
-          </div>
-        <!-- contacts -->
-        <div class="ftr-contacts">
-            <ul class="nav-text ftr-address-text">
-              <li class="list"><a href="tel:+380669384758">+380669384758</a></li>
-              <li class="list phone-order">
-                <a href="tel:+380679384758">+380679384758</a>
-              </li>
-              <li class="footer-email list">
-                <a href="mailto:minimal.furniture@gmail.com">minimal.furniture@gmail.com</a>
-              </li>
-            </ul>
-          </div>
-        <!-- privacy -->
-        <div class="ftr-privacy-block">
-            <p class="ftr-privacy ftr-privacy-text">
-              By using this website, you agree to the
-              <a href="" class="link privacy-link">Terms of Service</a> and
-              <a href="" class="link privacy-link">Privacy Policy</a>
-            </p>
-        </div>
+  <div class="container ftr-container">
+    <div class="logo-ftr-icons">
+      <!-- logo -->
+      <div class="ftr-logo">
+        <span>
+          <a href="./index.html" class="media-icons" aria-label="Site Logo"
+            ><svg class="ftr-logo-media" width="100" height="16">
+              <use href="./img/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+        </span>
+      </div>
+      <!-- icons -->
+      <ul class="ftr-media-list">
+        <li class="list media-icons">
+          <a
+            href="https://www.facebook.com/"
+            aria-label="Facebook"
+            rel="noopener norefferrer nofollow"
+            target="_blank"
+          >
+            <svg class="ftr-media" width="28" height="28">
+              <use href="./img/icons.svg#fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="list media-icons">
+          <a
+            href="https://www.instagram.com/"
+            aria-label="Instagram"
+            rel="noopener norefferrer nofollow"
+            target="_blank"
+          >
+            <svg class="ftr-media" width="28" height="28">
+              <use href="./img/icons.svg#inst"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="list media-icons">
+          <a
+            href="https://www.youtube.com/"
+            aria-label="Youtube"
+            rel="noopener norefferrer nofollow"
+            target="_blank"
+          >
+            <svg class="ftr-media" width="28" height="28">
+              <use href="./img/icons.svg#youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
+    <!-- nav -->
+    <ul class="ftr-nav-menu nav-text">
+      <li class="list">
+        <a href="#about_us" class="ftr-link-menu"> About us </a>
+      </li>
+      <li class="list">
+        <a href="#our_products" class="ftr-link-menu"> Our products </a>
+      </li>
+      <li class="list">
+        <a href="#price" class="ftr-link-menu"> Prices </a>
+      </li>
+      <li class="list">
+        <a href="#bestsellers" class="ftr-link-menu"> Bestsellers </a>
+      </li>
+      <li class="list">
+        <a href="#clients_reviews" class="ftr-link-m"> Reviews </a>
+      </li>
+    </ul>
+    <!-- address -->
+    <div class="ftr-address">
+      <ul class="nav-text ftr-address-text">
+        <li class="list">
+          <a href="https://goo.gl/maps/otmeh9LYeM7hSeMd6" class="link">
+            Obolonsky Prospect, 14, Kyiv</a
+          >
+        </li>
+        <li class="list">Daily 10:00-21:00</li>
+      </ul>
+    </div>
+    <!-- contacts -->
+    <div class="ftr-contacts">
+      <ul class="nav-text ftr-address-text">
+        <li class="list"><a href="tel:+380669384758">+380669384758</a></li>
+        <li class="list phone-order">
+          <a href="tel:+380679384758">+380679384758</a>
+        </li>
+        <li class="footer-email list">
+          <a href="mailto:minimal.furniture@gmail.com"
+            >minimal.furniture@gmail.com</a
+          >
+        </li>
+      </ul>
+    </div>
+    <!-- privacy -->
+    <div class="ftr-privacy-block">
+      <p class="ftr-privacy ftr-privacy-text">
+        By using this website, you agree to the
+        <a href="#terms-of-service" class="link privacy-link"
+          >Terms of Service</a
+        >
+        and
+        <a href="#Privacy" class="link privacy-link">Privacy Policy</a>
+      </p>
+    </div>
+  </div>
 </footer>
