--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -30,6 +30,7 @@
             src="./img/bestsellers/bed-1x-desk.jpg"
             alt="Modern bed"
             width="536"
+            height="489"
           />
         </picture>
 
@@ -67,6 +68,7 @@
                 src="./img/bestsellers/chairs-1x-desk.jpg"
                 alt="Lounge chairs"
                 width="343"
+                height="193"
               />
             </picture>
 
@@ -106,6 +108,7 @@
                 src="./img/bestsellers/ind_chair-1x-desk.jpg"
                 alt="Industrial chair"
                 width="343"
+                height="193"
               />
             </picture>
 
@@ -139,6 +142,7 @@
                 src="./img/bestsellers/stand-1x-desk.jpg"
                 alt="Sleek stand"
                 width="343"
+                height="193"
               />
             </picture>
 
@@ -170,6 +174,7 @@
                 src="./img/bestsellers/sofa-1x-desk.jpg"
                 alt="Grey sofa"
                 width="343"
+                height="193"
               />
             </picture>
 
