--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -31,6 +31,7 @@
               alt="vooden minimalist
               storage"
               width="343"
+              height="300"
             />
           </picture>
 
@@ -57,7 +58,8 @@
             <img
               src="./img/our_products/product2.jpg"
               alt="blue sofa"
-              width="343"
+              width="312"
+              height="300"
             />
           </picture>
           <h3 class="products-description">Handcrafted minimalist seating</h3>
@@ -76,7 +78,8 @@
             <img
               src="./img/our_products/product3.jpg"
               alt="metal table"
-              width="343"
+              width="312"
+              height="300"
             />
           </picture>
           <h3 class="products-description">Sleek and simple tables</h3>
@@ -95,7 +98,8 @@
             <img
               src="./img/our_products/product4.jpg"
               alt="blue chair"
-              width="343"
+              width="312"
+              height="300"
             />
           </picture>
           <h3 class="products-description">
