--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -53,7 +53,12 @@
           "
           media="(min-width:320px)"
         />
-        <img src="../img/about-us/about-us-1x" alt="sofa" width="704" />
+        <img
+          src="./img/about-us/about-us-1x"
+          alt="sofa"
+          width="704"
+          height="540"
+        />
       </picture>
     </div>
   </div>
