--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -42,6 +42,7 @@
             name="agree-checkbox"
             value="true"
             class="input-checkbox visually-hidden"
+            required
           />
           <label for="user-agree" class="label-checkbox">
             <span class="label-span">
